[#1802] Switch pax-web-jetty from javax to jakarta (deadlocks in HTTP/2 tests)